--- a/site/formulize.css
+++ b/site/formulize.css
@@ -1,258 +1,200 @@
-
 /* Formulize css */
 
-#listofentries h1, b {
-	color: black;
-}
-
-#listofentries a {
-	color: #666666;
-	font-weight: bold;
-	font-size: 14px;
-}
-
-.formulize_button {
-	color: white;
-	height: 27px;
-	width: 150px;
-	font-size: 12px;
-}
-
-#formulize_addButton {
-	padding: 0 1.8em;
-	background: url(images/contact-new.png) no-repeat left center;
-	background-color: #2F85DC;
-}
-
-#formulize_addMultiButton {
-	padding: 0 1.5em;
-	background: url(images/multi.png) no-repeat left center;
-	background-color: #2F85DC;
-}
-
-#formulize_changeColsButton {
-	padding: 0 1.5em;
-	background: url(images/table.png) no-repeat left center;
-	background-color: #3399FF;
-}
-
-#formulize_resetViewButton {
-	padding: 0 1.5em;
-	background: url(images/find.png) no-repeat left center;
-	background-color: #3399FF;
-}
-
-#formulize_saveViewButton {
-	padding: 0 1.5em;
-	background: url(images/findsave.png) no-repeat left center;
-	background-color: #3399FF;
-}
-
-#formulize_deleteViewButton {
-	padding: 0 1.5em;
-	background: url(images/finddel.png) no-repeat left center;
-	background-color: #3399FF;
-}
-
-#formulize_selectAllButton {
-	padding: 0 1.5em;
-	background: url(images/select.png) no-repeat left center;
-	background-color: #3CA683;
-}
-
-#formulize_clearSelectButton {
-	padding: 0 1.5em;
-	background: url(images/unselect.png) no-repeat left center;
-	background-color: #3CA683;
-}
-
-#formulize_cloneButton {
-	padding: 0 1.5em;
-	background: url(images/clone.png) no-repeat left center;
-	background-color: #3CA683;
-}
-
-#formulize_deleteButton {
-	padding: 0 1.5em;
-	background: url(images/delete.png) no-repeat left center;
-	background-color: #3CA683;
-}
-
-#formulize_calcButton {
-	padding: 0 1.5em;
-	background: url(images/calculator.png) no-repeat left center;
-	background-color: #A7A7A7;
-}
-
-#formulize_advCalcButton {
-	padding: 0 1.5em;
-	background: url(images/calculator.png) no-repeat left center;
-	background-color: #A7A7A7;
-}
-
-#formulize_exportButton {
-	padding: 0 1.5em;
-	background: url(images/math.png) no-repeat left center;
-	background-color: #2F85DC;
-}
-
-#formulize_importButton {
-	padding: 0 1.5em;
-	background: url(images/import.png) no-repeat left center;
-	background-color: #2F85DC;
-}
-
-#formulize_notifButton {
-	padding: 0 1.5em;
-	background: url(images/notif.png) no-repeat left center;
-	background-color: #5450A5;
-}
-
-#resbox {
-	background-color: #FFFFFF;
-}
-
-.head {
+#formulize-screen .head {
 	background-color: #8FBE58;
+	padding: 5px;
+	font-weight: bold;
+	border-top: 3px solid #CCCCCC;
 }
-
-.head center {
+#formulize-screen .head center {
 	width: 150px;
 }
-
-.odd.column {
+#formulize-screen .even {
+	background-color: #A4E2F7;
+	color:black;
+	padding: 5px;
+	border-top: 3px solid #cccccc;
+}
+#formulize-screen #formulizeform .even {
+	background-color: #80C3DD;
+	color:black;
+	padding: 5px;
+	border-top: 3px solid #cccccc;
+}
+#formulize-screen .odd.column {
 	background-color: #80C3DD;
 	width: 100%;
 }
-
-.even {
-	background-color: #A4E2F7;
-}
-
-
-
-
-
-
-
-/***************************************/
-
-
-
-
-
-#formulizeform floating-list-of-entries-save-button {
-	padding: 1em 1.5em;
-	margin: 1em 0;
-	background-color: #FFF;
-}
-
-#formulizeform #floating-list-of-entries-save-button.save_button_fixed {
-	position: fixed; 
-	bottom: 0;
-	z-index: 100;
-	margin-top: 0;
-	margin-bottom: 0;
-	border: solid 1px #1D65A5;
-}
-
-#formulizeform table td {
-	padding: 0;
-	border-width: 0;
-	vertical-align: top;
-}
-
-#formulizeform th {
-	font-size: large;
-}
-
-#formulizeform .outer {
-	color: #1B75BB;
-}
-#formulizeform .head {
-	color:#74B64A;
-	padding: 5px;
-	font-weight: bold;
-	border-top: 3px solid #CCCCCC;
-	background: url(images/redselect.png) no-repeat center center;
-}
-#formulizeform .even {
-	color:black;
-	padding: 5px;
-	border-top: 3px solid #CCCCCC;
-}
-#formulizeform .odd {
+#formulize-screen .odd {
 	color:black;
 	padding: 5px;
 	border-top: 3px solid #CCCCCC;
 	background-color: white
 }
-#formulizeform tr.even td {
+#formulize-screen tr.even td {
 	color:black;
 	padding: 5px;
 	border-top: 3px solid #CCCCCC;
 }
-#formulizeform tr.odd td {
+#formulize-screen tr.odd td {
 	color:black;
 	padding: 5px;
 	border-top: 3px solid #CCCCCC;
 	background-color: white;	
 }
-#formulizeform .xoops-form-element-caption .caption-marker {
+#formulize-screen table td {
+	padding: 0;
+	border-width: 0;
+	vertical-align: top;
+}
+#formulize-screen th {
+	font-size: large;
+}
+#formulize-screen #listofentries h1, b, tr {
+	color: black;
+}
+#formulize-screen  #listofentries a {
+	color: #666666;
+	font-weight: bold;
+	font-size: 14px;
+}
+.xoops-form-element-caption {
+	color: #6d6666;
+}
+#formulize-screen .xoops-form-element-caption .caption-marker {
 	display: none;
 }
-#formulizeform .xoops-form-element-help {
+#formulize-screen .xoops-form-element-help {
 	font-weight: normal;
 }
-
-#formulizeform tbody {
+#formulize-screen tbody {
   border-top: 0 solid white;
 }
-
-#formulizeform #currentview {
+#formulize-screen #currentview {
     width: 450px;
     font-size: 1.2em;
 }
-
-#formulizeform .floating-column {
+#formulize-screen .floating-column {
     position: fixed;
     border: 1px solid white;
     display: none;
     padding: 0px !important;
 }
-#formulizeform .floating-column .main-cell-div {
+#formulize-screen .floating-column .main-cell-div {
     float: left;
     border: 1px solid white;
     padding: 5px;
     
 }
 
+/* Formulize Button css */
 
-/*=== Formulize Boutons by Francois T ===*/
-#formulizeform button, #formulizeform input[type='submit'], #formulizeform input[type='button'], #formulizeform input[type='reset'] {
-	background-color: 			#F4F9FE;
-	-webkit-border-radius: 5px;
-	color: 						#2F85DC;
-	border:						1px solid;
-	border-color: 				#ccc;
+#formulize-screen .formulize_button {
+	color: white;
+	height: 27px;
+	width: 163px;
+	font-size: 12px;
+	border-color: #cccccc;
+    text-shadow: 0 -1px 0 rgba(0,0,0,.4);    
+    font-weight: bold;
+    height: 36px;
 }
-#formulizeform input:hover, #formulizeform button:hover, #formulizeform .xo-formbuttons:hover, #formulizeform .formButton:hover {
+#formulize-screen #formulize_addButton {
+	padding: 0 1.5em;
+	background: url(images/contact-new.png) no-repeat left center;
+	background-color: #2F85DC;
+	width: 190px !important;
+}
+#formulize-screen #formulize_addMultiButton {
+	padding: 0 1.5em;
+	background: url(images/multi.png) no-repeat left center;
+	background-color: #2F85DC;
+	width: 190px !important;
+}
+#formulize-screen #formulize_changeColsButton {
+	padding: 0 1.5em;
+	background: url(images/table.png) no-repeat left center;
+	background-color: #3399FF;
+}
+#formulize-screen #formulize_resetViewButton {
+	padding: 0 1.5em;
+	background: url(images/find.png) no-repeat left center;
+	background-color: #3399FF;
+}
+#formulize-screen #formulize_saveViewButton {
+	padding: 0 1.5em;
+	background: url(images/findsave.png) no-repeat left center;
+	background-color: #3399FF;
+}
+#formulize-screen #formulize_deleteViewButton {
+	padding: 0 1.5em;
+	background: url(images/finddel.png) no-repeat left center;
+	background-color: #3399FF;
+}
+#formulize-screen #formulize_selectAllButton {
+	padding: 0 1.5em;
+	background: url(images/select.png) no-repeat left center;
+	background-color: #3CA683;
+}
+#formulize-screen #formulize_clearSelectButton {
+	padding: 0 1.5em;
+	background: url(images/unselect.png) no-repeat left center;
+	background-color: #3CA683;
+}
+#formulize-screen #formulize_cloneButton {
+	padding: 0 1.5em;
+	background: url(images/clone.png) no-repeat left center;
+	background-color: #3CA683;
+}
+#formulize-screen #formulize_deleteButton {
+	padding: 0 1.5em;
+	background: url(images/delete.png) no-repeat left center;
+	background-color: #3CA683;
+}
+#formulize-screen #formulize_calcButton {
+	padding: 0 1.5em;
+	background: url(images/calculator.png) no-repeat left center;
+	background-color: #A7A7A7;
+}
+#formulize-screen #formulize_advCalcButton {
+	padding: 0 1.5em;
+	background: url(images/calculator.png) no-repeat left center;
+	background-color: #A7A7A7;
+}
+#formulize-screen #formulize_exportButton {
+	padding: 0 1.5em;
+	background: url(images/math.png) no-repeat left center;
+	background-color: #2F85DC;
+}
+#formulize-screen #formulize_importButton {
+	padding: 0 1.5em;
+	background: url(images/import.png) no-repeat left center;
+	background-color: #2F85DC;
+}
+#formulize-screen #formulize_notifButton {
+	padding: 0 1.5em;
+	background: url(images/notif.png) no-repeat left center;
+	background-color: #5450A5;
+}
+#formulize-screen #printbutton {
+	vertical-align: top;
+	margin: -10px 0 0 0 !important;
+}
+
+/* Formulize Boutons by Francois T */
+
+#formulize-screen button, #formulizeform input[type='submit'], #formulizeform input[type='button'], #formulizeform input[type='reset'] {
+	background-color: #F4F9FE;
+	-webkit-border-radius: 5px;
+	color: #2F85DC;
+	border:	1px solid;
+	border-color: #ccc;
+}
+#formulize-screen input:hover, #formulizeform button:hover, #formulizeform .xo-formbuttons:hover, #formulizeform .formButton:hover {
     transform: scale(1.2);  
     box-shadow: 0 0 65px #F4F9FE inset, 0 0 20px #F4F9FE inset, 0 0 15px #333;  
 }
-#formulizeform button:focus, #formulizeform input[type='submit']:focus, #formulizeform input[type='button']:focus, #formulizeform input[type='reset']:focus, #formulizeform .xo-formbuttons:focus, #formulizeform .formButton:focus {
-	background-color:			#f4f4f4;
-	border-color :				#333;
-}
-
-/*=== Need to add custom images, but we don't know the relative URL which will be diff. per installation, and not sure if we can solve this with PHP like we can in XOOPS/ICMS ===*/
-#formulizeform .formulize_button {
-    background: #2F85DC;
-    border-color: #0076a3;
-    color: #fff !important;
-    text-shadow: 0 -1px 0 rgba(0,0,0,.4);    
-    font-size: 15px;
-    font-weight: bold;
-    height: 36px;
-    width: 173px !important;
+#formulize-screen button:focus, #formulizeform input[type='submit']:focus, #formulizeform input[type='button']:focus, #formulizeform input[type='reset']:focus, #formulizeform .xo-formbuttons:focus, #formulizeform .formButton:focus {
+	background-color: #f4f4f4;
+	border-color : #333;
 }
