--- a/site/formulize.css
+++ b/site/formulize.css
@@ -3,7 +3,7 @@
 /* I am totally not done here!!!!!!!!!!!!!!*/
 /*
 For testing!
-#formulize-screen {
+#formulize_form {
 	background: #ffffff !important;
 	background-color: #ffffff !important;
 	background-image: none !important;
@@ -12,75 +12,75 @@ For testing!
 }
 */
 
-#formulize-screen * {
+#formulize_form * {
 	/*background-color: transparent;*/
 }
 
 
-#formulize-screen table tr, #formulize-screen table, #formulize-screen table h1 {
+#formulize_form table tr, #formulize_form table, #formulize_form table h1 {
 	border: none !important;
 	background: #ffffff !important;
 	background-image: none !important; 
 }
 
-#formulize-screen tbody tr td {
+#formulize_form tbody tr td {
 	/*background-color: transparent;*/
 }
 
-#formulize-screen .head {
+#formulize_form .head {
 	background-color: #8FBE58;
 	padding: 5px;
 	font-weight: bold;
 	border-top: 3px solid #CCCCCC;
 }
-#formulize-screen .head center {
+#formulize_form .head center {
 	width: 150px;
 }
-#formulize-screen .even {
+#formulize_form .even {
 	background-color: #A4E2F7;
 	color:black;
 	padding: 5px;
 	border-top: 3px solid #cccccc;
 }
-#formulize-screen #formulizeform .even {
+#formulize_form #formulizeform .even {
 	background-color: #80C3DD;
 	color:black;
 	padding: 5px;
 	border-top: 3px solid #cccccc;
 }
-#formulize-screen .odd.column {
+#formulize_form .odd.column {
 	background-color: #80C3DD;
 	width: 100%;
 }
-#formulize-screen .odd {
+#formulize_form .odd {
 	color:black;
 	padding: 5px;
 	border-top: 3px solid #CCCCCC;
 	background-color: white
 }
-#formulize-screen tr.even td {
+#formulize_form tr.even td {
 	color:black;
 	padding: 5px;
 	border-top: 3px solid #CCCCCC;
 }
-#formulize-screen tr.odd td {
+#formulize_form tr.odd td {
 	color:black;
 	padding: 5px;
 	border-top: 3px solid #CCCCCC;
 	background-color: white;	
 }
-#formulize-screen table td {
+#formulize_form table td {
 	padding: 0;
 	border-width: 0;
 	vertical-align: top;
 }
-#formulize-screen th {
+#formulize_form th {
 	font-size: large;
 }
-#formulize-screen #listofentries h1, b, tr {
+#formulize_form #listofentries h1, b, tr {
 	color: black;
 }
-#formulize-screen  #listofentries a {
+#formulize_form  #listofentries a {
 	color: #666666;
 	font-weight: bold;
 	font-size: 14px;
@@ -88,26 +88,26 @@ For testing!
 .xoops-form-element-caption {
 	color: #6d6666;
 }
-#formulize-screen .xoops-form-element-caption .caption-marker {
+#formulize_form .xoops-form-element-caption .caption-marker {
 	display: none;
 }
-#formulize-screen .xoops-form-element-help {
+#formulize_form .xoops-form-element-help {
 	font-weight: normal;
 }
-#formulize-screen tbody {
+#formulize_form tbody {
   border-top: 0 solid white;
 }
-#formulize-screen #currentview {
+#formulize_form #currentview {
     width: 450px;
     font-size: 1.2em;
 }
-#formulize-screen .floating-column {
+#formulize_form .floating-column {
     position: fixed;
     border: 1px solid white;
     display: none;
     padding: 0px !important;
 }
-#formulize-screen .floating-column .main-cell-div {
+#formulize_form .floating-column .main-cell-div {
     float: left;
     border: 1px solid white;
     padding: 5px;
@@ -116,7 +116,7 @@ For testing!
 
 /* Formulize Button css */
 
-#formulize-screen .formulize_button {
+#formulize_form .formulize_button {
 	color: white;
 	height: 27px;
 	width: 163px;
@@ -126,102 +126,102 @@ For testing!
     font-weight: bold;
     height: 36px;
 }
-#formulize-screen #formulize_addButton {
+#formulize_form #formulize_addButton {
 	padding: 0 1.5em;
 	background: url(images/contact-new.png) no-repeat left center;
 	background-color: #2F85DC;
 	width: 190px !important;
 }
-#formulize-screen #formulize_addMultiButton {
+#formulize_form #formulize_addMultiButton {
 	padding: 0 1.5em;
 	background: url(images/multi.png) no-repeat left center;
 	background-color: #2F85DC;
 	width: 190px !important;
 }
-#formulize-screen #formulize_changeColsButton {
+#formulize_form #formulize_changeColsButton {
 	padding: 0 1.5em;
 	background: url(images/table.png) no-repeat left center;
 	background-color: #3399FF;
 }
-#formulize-screen #formulize_resetViewButton {
+#formulize_form #formulize_resetViewButton {
 	padding: 0 1.5em;
 	background: url(images/find.png) no-repeat left center;
 	background-color: #3399FF;
 }
-#formulize-screen #formulize_saveViewButton {
+#formulize_form #formulize_saveViewButton {
 	padding: 0 1.5em;
 	background: url(images/findsave.png) no-repeat left center;
 	background-color: #3399FF;
 }
-#formulize-screen #formulize_deleteViewButton {
+#formulize_form #formulize_deleteViewButton {
 	padding: 0 1.5em;
 	background: url(images/finddel.png) no-repeat left center;
 	background-color: #3399FF;
 }
-#formulize-screen #formulize_selectAllButton {
+#formulize_form #formulize_selectAllButton {
 	padding: 0 1.5em;
 	background: url(images/select.png) no-repeat left center;
 	background-color: #3CA683;
 }
-#formulize-screen #formulize_clearSelectButton {
+#formulize_form #formulize_clearSelectButton {
 	padding: 0 1.5em;
 	background: url(images/unselect.png) no-repeat left center;
 	background-color: #3CA683;
 }
-#formulize-screen #formulize_cloneButton {
+#formulize_form #formulize_cloneButton {
 	padding: 0 1.5em;
 	background: url(images/clone.png) no-repeat left center;
 	background-color: #3CA683;
 }
-#formulize-screen #formulize_deleteButton {
+#formulize_form #formulize_deleteButton {
 	padding: 0 1.5em;
 	background: url(images/delete.png) no-repeat left center;
 	background-color: #3CA683;
 }
-#formulize-screen #formulize_calcButton {
+#formulize_form #formulize_calcButton {
 	padding: 0 1.5em;
 	background: url(images/calculator.png) no-repeat left center;
 	background-color: #A7A7A7;
 }
-#formulize-screen #formulize_advCalcButton {
+#formulize_form #formulize_advCalcButton {
 	padding: 0 1.5em;
 	background: url(images/calculator.png) no-repeat left center;
 	background-color: #A7A7A7;
 }
-#formulize-screen #formulize_exportButton {
+#formulize_form #formulize_exportButton {
 	padding: 0 1.5em;
 	background: url(images/math.png) no-repeat left center;
 	background-color: #2F85DC;
 }
-#formulize-screen #formulize_importButton {
+#formulize_form #formulize_importButton {
 	padding: 0 1.5em;
 	background: url(images/import.png) no-repeat left center;
 	background-color: #2F85DC;
 }
-#formulize-screen #formulize_notifButton {
+#formulize_form #formulize_notifButton {
 	padding: 0 1.5em;
 	background: url(images/notif.png) no-repeat left center;
 	background-color: #5450A5;
 }
-#formulize-screen #printbutton {
+#formulize_form #printbutton {
 	vertical-align: top;
 	margin: -10px 0 0 0 !important;
 }
 
 /* Formulize Boutons by Francois T */
 
-#formulize-screen button, #formulizeform input[type='submit'], #formulizeform input[type='button'], #formulizeform input[type='reset'] {
+#formulize_form button, #formulizeform input[type='submit'], #formulizeform input[type='button'], #formulizeform input[type='reset'] {
 	background-color: #F4F9FE;
 	-webkit-border-radius: 5px;
 	color: #2F85DC;
 	border:	1px solid;
 	border-color: #ccc;
 }
-#formulize-screen input:hover, #formulizeform button:hover, #formulizeform .xo-formbuttons:hover, #formulizeform .formButton:hover {
+#formulize_form input:hover, #formulizeform button:hover, #formulizeform .xo-formbuttons:hover, #formulizeform .formButton:hover {
     transform: scale(1.2);  
     box-shadow: 0 0 65px #F4F9FE inset, 0 0 20px #F4F9FE inset, 0 0 15px #333;  
 }
-#formulize-screen button:focus, #formulizeform input[type='submit']:focus, #formulizeform input[type='button']:focus, #formulizeform input[type='reset']:focus, #formulizeform .xo-formbuttons:focus, #formulizeform .formButton:focus {
+#formulize_form button:focus, #formulizeform input[type='submit']:focus, #formulizeform input[type='button']:focus, #formulizeform input[type='reset']:focus, #formulizeform .xo-formbuttons:focus, #formulizeform .formButton:focus {
 	background-color: #f4f4f4;
 	border-color : #333;
 }
